# comp_model

./: .gitignore  404.html  README.md  USER_GUIDE.md  bayes_implementation.md  environment.yml  index.html  mkdocs.yml  pyproject.toml  research.md
.githooks/: pre-push
apps/: __init__.py  (+1 more)
comp_model_analysis/: pyproject.toml
comp_model_analysis/src/comp_model_analysis/: __init__.py  parameter_recovery.py  plots.py  profile_likelihood.py
comp_model_core/: pyproject.toml
comp_model_core/src/comp_model_core/: __init__.py  errors.py  registry.py  requirements.py  rng.py  spec.py  utility.py  validation.py
comp_model_core/src/comp_model_core/data/: __init__.py  types.py
comp_model_core/src/comp_model_core/events/: __init__.py  accessors.py  convert.py  types.py
comp_model_core/src/comp_model_core/interfaces/: __init__.py  bandit.py  block_runner.py  demonstrator.py  estimator.py  generator.py  model.py
comp_model_core/src/comp_model_core/params/: __init__.py  bounds.py  schema.py  transforms.py
comp_model_core/src/comp_model_core/plans/: __init__.py  block.py  io.py
comp_model_core/src2/comp_model_core/: spec.py
comp_model_core/src2/comp_model_core/data/: __init__.py
comp_model_core/src2/comp_model_core/params/: transforms.py
comp_model_core/src2/comp_model_core/plans/: __init__.py  io.py
comp_model_core/tests/: test_data_types.py  test_generator_base.py  test_model_helpers.py  test_plans.py
comp_model_impl/: pyproject.toml
comp_model_impl/src/comp_model_impl/: __init__.py  register.py
comp_model_impl/src/comp_model_impl/analysis/: __init__.py  model_selection.py  psis_loo.py  waic.py
comp_model_impl/src/comp_model_impl/bandits/: __init__.py  bernoulli.py  lottery_choice.py  registry.py
comp_model_impl/src/comp_model_impl/demonstrators/: __init__.py  factories.py  fixed_sequence.py  noisy_best.py  registry.py  rl_agent.py
comp_model_impl/src/comp_model_impl/estimators/: __init__.py  mle_event_log.py  mle_generic.py  within_subject_shared_delta.py
comp_model_impl/src/comp_model_impl/estimators/stan/: __init__.py  cmdstan_utils.py  exporter.py  nuts.py  priors.py
comp_model_impl/src/comp_model_impl/estimators/stan/adapters/: __init__.py  ap_rl_nostay.py  ap_rl_nostay_within_subject.py  ap_rl_stay.py  ap_rl_stay_within_subject.py  base.py  mvs.py  qrl.py  qrl_stay.py  qrl_stay_within_subject.py  qrl_within_subject.py  registry.py  vicQ_ap_dualw.py  vicQ_ap_dualw_nostay.py  vicQ_ap_dualw_nostay_within_subject.py  vicQ_ap_dualw_stay.py  vicQ_ap_dualw_stay_within_subject.py  vicQ_ap_dualw_within_subject.py  vicQ_ap_indep_dualw.py  vicarious_ap_db_stay.py  vicarious_ap_vs.py  vicarious_db_stay.py  vicarious_db_stay_within_subject.py  vicarious_dir_db_stay.py  vicarious_rl.py  vicarious_rl_stay.py  vicarious_rl_stay_within_subject.py  vicarious_rl_within_subject.py  vicarious_vs.py  vicarious_vs_stay.py  vs.py  vs_within_subject.py
comp_model_impl/src/comp_model_impl/estimators/stan/ap_rl_nostay/: hier_body.stan  indiv_body.stan
comp_model_impl/src/comp_model_impl/estimators/stan/ap_rl_nostay_within_subject/: hier_body.stan  indiv_body.stan
comp_model_impl/src/comp_model_impl/estimators/stan/ap_rl_stay/: hier_body.stan  indiv_body.stan
comp_model_impl/src/comp_model_impl/generators/: __init__.py  event_log.py  trial_by_trial.py
comp_model_impl/src/comp_model_impl/likelihood/: __init__.py  event_log_replay.py  replay.py
comp_model_impl/src/comp_model_impl/models/: __init__.py  common.py  registry.py  within_subject_shared_delta.py
comp_model_impl/src/comp_model_impl/models/ap_rl_nostay/: __init__.py  ap_rl_nostay.py  schema.py
comp_model_impl/src/comp_model_impl/models/ap_rl_stay/: __init__.py  ap_rl_stay.py  schema.py
comp_model_impl/src/comp_model_impl/models/mvs/: __init__.py  mvs.py  schema.py
comp_model_impl/src/comp_model_impl/models/qrl/: __init__.py  bounds.py  qrl.py  schema.py
comp_model_impl/src/comp_model_impl/models/qrl_stay/: __init__.py  qrl_stay.py  schema.py
comp_model_impl/src/comp_model_impl/models/unidentifiable_qrl/: __init__.py  bounds.py  schema.py  unidentifiable_qrl.py
comp_model_impl/src/comp_model_impl/models/vicQ_ap_dualw/: __init__.py  schema.py  schema_indep_dualw.py  vicQ_ap_dualw.py  vicQ_ap_indep_dualw.py
comp_model_impl/src/comp_model_impl/models/vicQ_ap_dualw_nostay/: __init__.py  schema_nostay.py  vicQ_ap_dualw_nostay.py
comp_model_impl/src/comp_model_impl/models/vicQ_ap_dualw_stay/: __init__.py  schema_indep_dualw.py  schema_stay.py  vicQ_ap_dualw_stay.py  vicQ_ap_indep_dualw.py
comp_model_impl/src/comp_model_impl/models/vicarious_ap_db_stay/: __init__.py  bounds.py  schema.py  vicarious_ap_db_stay.py
comp_model_impl/src/comp_model_impl/models/vicarious_ap_vs/: __init__.py  bounds.py  schema.py  vicarious_ap_vs.py
comp_model_impl/src/comp_model_impl/models/vicarious_db_stay/: __init__.py  bounds.py  schema.py  vicarious_db_stay.py
comp_model_impl/src/comp_model_impl/models/vicarious_dir_db_stay/: __init__.py  bounds.py  schema.py  vicarious_dir_db_stay.py
comp_model_impl/src/comp_model_impl/models/vicarious_rl/: bounds.py  schema.py  vicarious_rl.py
comp_model_impl/src/comp_model_impl/models/vicarious_rl_stay/: __init__.py  schema.py  vicarious_rl_stay.py
comp_model_impl/src/comp_model_impl/models/vicarious_vs/: __init__.py  bounds.py  schema.py  vicarious_vs.py
comp_model_impl/src/comp_model_impl/models/vicarious_vs_stay/: __init__.py  bounds.py  schema.py  vicarious_vs_stay.py
comp_model_impl/src/comp_model_impl/models/vs/: README.md  __init__.py  bounds.py  schema.py  vs.py
comp_model_impl/src/comp_model_impl/recovery/: __init__.py  common.py
comp_model_impl/src/comp_model_impl/recovery/model/: __init__.py  analysis.py  config.py  criteria.py  likelihood.py  resolution.py  run.py
comp_model_impl/src/comp_model_impl/recovery/parameter/: __init__.py  analysis.py  config.py  dashboard.py  plots.py  run.py  sampling.py
comp_model_impl/src/comp_model_impl/tasks/: __init__.py  block_runner_wrappers.py  build.py  runner_block_wrappers.py  social_wrapper.py
(+686 files in other folders)
