[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comp-model"
version = "0.1.0"
description = "Clean-slate decision modeling library"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Gota Morishita" }]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
docs = [
  "mkdocs>=1.6",
]

[project.scripts]
comp-model-recovery = "comp_model.recovery.cli:run_recovery_cli"
comp-model-fit = "comp_model.inference.cli:run_fit_cli"
comp-model-compare = "comp_model.inference.model_selection_cli:run_model_comparison_cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
