[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comp-model"
version = "0.1.0"
description = "Clean-slate decision modeling library"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Gota Morishita" }]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5.0",
  "mypy>=1.10",
  "types-PyYAML>=6.0.12",
]
docs = [
  "mkdocs>=1.6",
]
stan = [
  "cmdstanpy>=1.2",
]

[project.scripts]
comp-model-recovery = "comp_model.recovery.cli:run_recovery_cli"
comp-model-fit = "comp_model.inference.cli:run_fit_cli"
comp-model-compare = "comp_model.inference.model_selection_cli:run_model_comparison_cli"

[project.urls]
Documentation = "https://g-morishita.github.io/comp_model/"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
comp_model = ["inference/stan/within_subject/*.stan"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["site"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = ["E731"]

[tool.mypy]
python_version = "3.11"
files = ["src/comp_model"]
mypy_path = "src"
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
pretty = true
show_error_codes = true
namespace_packages = true
ignore_missing_imports = true
