[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "comp-model-core"
version = "0.1.0"
description = "Lightweight core interfaces for computational models, inference, and simulation pipelines."
requires-python = ">=3.10"
dependencies = [
  "numpy>=2.0",
  "scipy>=1.6.2",
]
authors = [
  {name = "Gota Morishita", email = "gota.morishita@gmail.com"},
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"