[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "comp-model-impl"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "comp-model-core>=0.1.0",
  "numpy",
  "scipy",
  "pandas",
  "matplotlib",
  "plotly",
  "dash",
  "pyyaml",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]